--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .hover_card {
+    &:hover {
+      > img {
+      transform: scale(1.05);
+      transition: transform 0.2s ease-in-out;
+      }
+    }
+  }
+}
