--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -18,7 +18,7 @@
         @apply dark:bg-darkBg01 bg-white dark:text-darkText01
     }
 
-    h1, h2, h3, p, li, a, span, code {
+    h1, h2, h3, p, li, a, span, code, strong, pre {
         @apply dark:text-darkText01
     }
 
